--- a/config/src/main/resources/shared/application.yml
+++ b/config/src/main/resources/shared/application.yml
@@ -19,6 +19,16 @@ management:
         - health
         - mappings
         
+spring:
+  kafka:
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.LongSerializer    
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer  
+    consumer:
+       key-deserializer: org.apache.kafka.common.serialization.LongDeserializer  
+       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer  
+       properties:
+        spring.json.trusted.packages: '*'   
         
 channels:
   ticket: 'tickets'
