--- a/config/src/main/resources/shared/gateway.yml
+++ b/config/src/main/resources/shared/gateway.yml
@@ -1,4 +1,14 @@
 server:
   port: 8000
   
+spring:     
+  r2dbc:
+    url: 'r2dbc:postgresql://localhost:5432/gateway'
+    username: postgres
+    password: postgres
 
+    
+
+  
+
+  
