--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -14,9 +14,9 @@ spring:
         wiretap: true
 logging:
   level:
-    # org.springframework.security: debug
+     org.springframework.security: debug
 #    reactor.netty: TRACE
-    org.springframework.cloud.gateway: debug
-    org.springframework.http.server.reactive: debug
-    org.springframework.web.reactive: debug
-    org.springframework.boot.autoconfigure.web: debug
+#    org.springframework.cloud.gateway: debug
+#    org.springframework.http.server.reactive: debug
+#    org.springframework.web.reactive: debug
+#    org.springframework.boot.autoconfigure.web: debug
