--- a/notification-service/src/main/resources/bootstrap.yml
+++ b/notification-service/src/main/resources/bootstrap.yml
@@ -8,4 +8,7 @@ spring:
       password: ${CONFIG_SERVICE_PASSWORD}
       username: user
 
+logging:
+  level:
+     org.springframework.security: debug
 
