Actuator et Metriques Grafana

--- a/config/src/main/resources/shared/application.yml
+++ b/config/src/main/resources/shared/application.yml
@@ -14,12 +14,7 @@ management:
   endpoints:
     web:
       exposure:
-        include:
-        - env
-        - beans
-        - health
-        - mappings
-        - gateway
+        include: '*'
   endpoint:
     health:
       show-details: always
