--- a/config/src/main/resources/shared/application.yml
+++ b/config/src/main/resources/shared/application.yml
@@ -20,6 +20,10 @@ management:
       show-details: always
       probes:
         enabled: true
+  tracing:
+    enabled: true
+    sampling.probability: 1.0
+
         
 spring:
   datasource:
