Configure Eureka Client for Windows

--- a/config/src/main/resources/shared/application.yml
+++ b/config/src/main/resources/shared/application.yml
@@ -6,6 +6,7 @@ eureka:
       enabled: true
     preferSameZoneEureka: true
   instance:
+    prefer-ip-address: true
     metadataMap:
       zone: zone1
 
