Configuration Health endpoint et ouverture de l URL actuator

--- a/config/src/main/resources/shared/application.yml
+++ b/config/src/main/resources/shared/application.yml
@@ -20,6 +20,11 @@ management:
         - health
         - mappings
         - gateway
+  endpoint:
+    health:
+      show-details: always
+      probes:
+        enabled: true
         
 spring:
   datasource:
